Fixed jumping button

--- a/src/styles.css
+++ b/src/styles.css
@@ -134,7 +134,7 @@ li {
 .contact-button:hover {
   text-decoration: none;
   color: var(--accent-color);
-  padding: 22px 26px;
+  padding: 23px 27px;
   border-radius: 6px;
   background: white;
   font-family: "Poppins", sans-serif;
@@ -173,6 +173,7 @@ li {
   font-weight: 500;
   font-size: 16px;
   transition: all 120ms ease-in-out;
+  border: 1.8px solid var(--accent-color);
 }
 
 .info-inverse {
